# main-trade-back

./: .gitignore  main.py  pyproject.toml  requirements.txt  run_server.py
app/: main.py
app/core/: alpaca_client.py  config.py  polygon_client.py  schwab_client.py
app/models/: stock.py
app/routers/: account.py  health.py  stock.py
